--- a/CSS/style.CSS
+++ b/CSS/style.CSS
@@ -1,3 +1,8 @@
+*{
+  margin: 0;
+  padding: 0;
+}
+
 body {
   margin: 0;
   font-family: 'Segoe UI', Arial, sans-serif;
@@ -15,6 +20,12 @@ body {
   position: fixed;
   left: 0;
   top: 0;
+}
+#iniciativa-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  min-height: 100px;
 }
 .sidebar h1 {
   color: #610606;
