--- a/CSS/formularios.css
+++ b/CSS/formularios.css
@@ -6,6 +6,7 @@
     height: 100%;
     background-color: rgba(0, 0, 0, 0.5);
     z-index: 1000;
+
     display: none;
     justify-content: center;
     align-items: center;
@@ -13,6 +14,9 @@
 }
 
 .create-forms {
+    background-color: gray;
+    border-radius: 15px;
+    padding: 20px 30px;
     background-color: #1f1f1f;
     color: #f5f5f5;
     border-radius: 18px;
@@ -30,6 +34,7 @@
     flex-direction: column;
 }
 
+#create-ficha textarea {
 .create-forms h2 {
     margin: 0;
     color: #f5f5f5;
@@ -45,6 +50,7 @@
 .create-forms select,
 .create-forms textarea {
     width: 100%;
+    box-sizing: border-box;
 }
 
 .form-buttons {
@@ -57,4 +63,3 @@
 .show-form
 {
     display: flex;
-}
