--- a/CSS/style.CSS
+++ b/CSS/style.CSS
@@ -204,6 +204,7 @@ h2 {
 button {
   background: #610606;
   border: none;
+  color: #222;
   color: #f5f5f5;
   padding: 8px 14px;
   margin: 8px 0 14px 0;
@@ -222,6 +223,7 @@ button:disabled {
 input, select, textarea {
   background: #292929;
   border: 1px solid #555;
+  color: #610606;
   color: #f5f5f5;
   border-radius: 3px;
   padding: 7px 9px;
@@ -291,6 +293,7 @@ textarea {
   margin: 7px 0;
   border-radius: 8px;
   border: none;
+  width: 80%;
   width: 100%;
   min-height: 75px;
   background: #111;
